# CristianAbrante

./: .gitignore  AGENTS.md  Cristian_Abrante_CV.yaml  README.md  SCHEMA.md  package-lock.json  package.json  pyproject.toml  resume.json
.github/workflows/: README.md  deploy-website.yml  sync-resume.yml  validate-resume.yml
cv/: README.md
cv/output/: .gitignore  cv.tex  page1sidebar.tex
cv/template/: altacv.cls  main.tex  page1sidebar.tex  page2sidebar.tex
docs/: SEO_GUIDE.md  basics.md
scripts/: README.md  generate-cv.js  generate-readme.js  generate-website.js
website/template/: index.html  robots.txt  script.js  sitemap.xml  style.css
